[build-system]
# requires = ["maturin>=1.0,<2.0"] # TODO: remove this once twine can handle metadata 2.4
requires = ["maturin==1.7.5"]
build-backend = "maturin"

[project]
name = "self_encryption"
dynamic = ["version"]
description = "Python bindings for self-encryption library"
authors = [{ name = "David Irvine", email = "david.irvine@maidsafe.net" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
dependencies = [
    "maturin>=1.7.8",
    "pip>=24.0",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "self_encryption._rust"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
